tailwind,router,axios and logo imported and theme configured

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="w-full h-full p-0 m-0 text-sm">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luxehome</title>
+    <title>LuxeHome</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@200;400;600;900&family=Poppins:wght@300;400;600;800&family=Sen:wght@400;700;800&display=swap");
+    </style>
   </head>
-  <body>
+  <body class="box-border min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
