--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@200;400;600;900&family=Poppins:wght@300;400;600;800&family=Sen:wght@400;700;800&display=swap");
     </style>
   </head>
-  <body class="box-border min-h-screen">
+  <body class="box-border min-h-screen bg-bodyBackground">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
