filter component finised, upto cart,auth and login

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="w-full h-full p-0 m-0 text-sm">
+<html lang="en" class="w-full h-full p-0 m-0 ]">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
