products skeleton added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LuxeHome</title>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@200;400;600;900&family=Poppins:wght@300;400;600;800&family=Sen:wght@400;700;800&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Quicksand:wght@500;600;700&family=Sen:wght@400;600;700;800&display=swap");
     </style>
   </head>
   <body class="box-border bg-bodyBackground min-h-screen text-base">
